@@ -1,3 +1,7 @@
+Sat Aug 30 17:10:23 2014  Jiri (George) Lebl <jirka@5z.com>
+
+	* help/C/genius.xml: fix spelling, update grant info
+
 Sat Aug 30 15:40:00 2014  Jiri (George) Lebl <jirka@5z.com>
 
 	* gtkextra/gtkplotflux.c: fix almost zero arrows causing NaNs causing
